--- a/Project_Description.html
+++ b/Project_Description.html
@@ -819,7 +819,7 @@ through our Circadian rhythm.  <a
           href="https://www.figma.com/files/recent?fuid=971228045439887774"> Figma </a>has been selected to develop our proof-of-concept
            prototype as one of our valued team members, Nicole Clarke, has experience using it. While not relevant to functionality, if we wanted to use <a
             href="https://developer.apple.com/fonts/"> Apple fonts</a>, we would require purchasing a licence.</p>
-            
+
             <br>
             <h4>Hardware </h4>
             <p>To create
@@ -964,17 +964,15 @@ through our Circadian rhythm.  <a
 </p>
   <img alt="survey format" class="img-fluid" src="assets/SurveyImage.png">
 <br>
+<br>
 <p>Although the sample size was small and the participants were known to the team, the results of the survey were encouraging.
    100% of respondents suggested that they understood the problem that the application was aiming to solve and how it proposed to
-    solve it.Most participants indicated they would use the application, those that did not commented that they did not have any devices
-    turned on while driving.  </p>
-<img alt="survey results use" class="img-fluid" src="assets/chart_use_DA.png"> <br>
-<p>
-The survey suggests that 50% of people will consider paying for the application which may be useful when determining whether to
+    solve it.  Most participants indicated they would use the application, those that did not commented that they did not have any devices
+    turned on while driving.  The survey suggests that 50% of people will consider paying for the application which may be useful when determining whether to
 charge for the app, look for advertising income or attempt to align with an insurer or motoring association.
 </p><br>
-<img alt="survey results pay" class="img-fluid" src="assets/chart_pay.png">
-<br><br>
+<img alt="survey results pie charts" class="img-fluid" src="assets/survey_result.jpg">
+<br>
 <h5>
 Further Testing
 </h5>
