updated ideal jobs and tools

--- a/Team_Profile.html
+++ b/Team_Profile.html
@@ -160,7 +160,7 @@
       I studied pharmacy after leaving school, graduating in 2005 before completing registration training, and passing the examination for registration. After this I decided to work freelance as a locum in order to gain as much varied experience of the sector as I could.  Because I enjoyed it so much, after telling myself that I would do it for a year or so, I ended up continuing the role one and off for over ten years. During this time, I met my wife and we went on to have two children.  A few years after qualifying, personal events meant a change of scene and some spare time so I decided to study laws of international business, an area that interested me and that I thought a knowledge of would prove useful in future. I thoroughly enjoyed this, especially competition and EU law.   Recently we accepted an opportunity for our family to move back to Australia, I saw this as an opportunity give my career a steer in another direction. I have been involved in a few projects related to IT which I had found very engaging and so chose to enrol in this course.
       </p>
 
-    
+
 
       <h3 id="liljana">Liljana Josevski - Student: S3909588</h3>
 
@@ -371,10 +371,12 @@
         to me of my interest in biomedicine and how technology can help improve human livelihoods. </p>
 
       <h4>Matthew</h4>
-
+I am still very much looking towards a career in Cyber Security, and this has been further solidified thanks to the content covered in the course work in week 11. And although the feedback I received around Assignment 1 and 2 was favourable around other parts of IT; I still would like to explore my curiosity around Cyber Security.
       <h4>Gerard</h4>
+No, my ideal job has not changed because of feedback from Assignment 1 or 2.  While this course has made me aware of areas that now interest me, the feedback received from the Assignments has not influenced my planned career path.
 
-    </div>
+    <br>
+  </div>
 
   </div>
 
