--- a/Tools.html
+++ b/Tools.html
@@ -113,16 +113,7 @@
     <div class="w-50 mx-auto">
 
       <p>
-        This time around we decided not to concentrate too much on the website as we wanted to perfect our content as
-        much as possible because we found we spent too much time in A2 perfecting the webpage. So only towards the end
-        of our project, we started to use GitHub to apply all our content in the correct files and therefore the audit
-        trail on the Git repository does not really reflect how much work each team member applied to the project solely
-        by looking at the GitHub repository alone. We communicated quite a lot through teams in our group chat named
-        “Drive Aware A3- Main Chat”. Here you will find many files uploaded and shared documents in which we edited all
-        our work here, so everyone could see the progress. In saying this, we had a few hiccups where some team members
-        would download the file and then work on it on their desktop not realising someone else was working on it, in
-        turn creating confusion between some team members. But was quickly resolved without too much time lost. Overall
-        great teamwork and fantastic team members.
+        For A3, we decided not to concentrate on the website as much as we did in A2. This is because we wanted to strive for perfection with our content and we felt that too much time was spent on the webpage for A2. Accordingly, we waited until towards the end of our project to use GitHub to apply our content.  Therefore, the audit trail on the GitHub repository does not truly reflect how much work each team member undertook.  We communicated regularly through teams in our group chat named “Drive Aware A3- Main Chat”. Here you will find many files uploaded and shared documents which we edited all our work. This enabled everyone to see the group’s progress. While this system worked well in part, we encountered problems where some team members downloaded the file to work on it on their desktop and not realising someone else was working on it. This created confusion between some team members. But was quickly resolved without too much time lost. Overall progress was smooth, we were lucky to have solid teamwork and superb team members.
       </p>
 
       <h2>Important Links</h2>
@@ -258,7 +249,7 @@
           - A3</a>
       </p>
 
-      
+
 
 <br>
   <br>
