--- a/A5.html
+++ b/A5.html
@@ -13,24 +13,20 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
   <!-- Intro page CSS -->
-  <link rel="stylesheet" type="text/css" href="css/intro.css">
+  <link rel="stylesheet" type="text/css" href="css/A5.css">
 
-  <title>DAT Team - Projects</title>
+  <title>A5 - Presentation</title>
 </head>
 <body>
 
-<div class="container-fluid h-100">
-  <div class="row h-100">
+<div class="container-fluid p-0">
+  <div class="row">
     <div class="col text-center my-auto mx-auto">
-      <div id="content">
-        <h1 class="display-1 text-light">DAT Team Projects</h1>
-        <button class="btn intro-btn m-2"><a class="" href="A2/index.html">Assignment 2</a></button>
-        <button class="btn intro-btn m-2"><a href="A3TOC.html">Assignment 3</a></button>
-        <button class="btn intro-btn m-2"><a href="A5.html">Assignment 5</a></button>
-      </div>
+        <iframe class="presentation p-0 m-0" src="https://www.youtube.com/embed/U337jUNd1JY"></iframe>
     </div>
   </div>
 </div>
+
 
 <!-- Optional JavaScript; choose one of the two! -->
 
