--- a/A3TOC.html
+++ b/A3TOC.html
@@ -73,6 +73,12 @@
             </a>
           </li>
 
+          <li class="mb-2">
+            <a aria-expanded="false" class="text-white" href="References.html">
+              References
+            </a>
+          </li>
+
           <li class="mt-5 mb-2">
             <a aria-expanded="false" class="text-white" href="index.html">
               Back to Introduction Page
