--- a/Group_Reflection.html
+++ b/Group_Reflection.html
@@ -96,6 +96,12 @@
           Group Reflection
         </a>
       </li>
+
+      <li class="mb-1">
+        <a aria-expanded="false" class="btn rounded collapsed" href="References.html">
+          References
+        </a>
+      </li>
     </ul>
 
   </nav>
@@ -113,32 +119,71 @@
     <div class="w-50 mx-auto">
 
       <h3>Chris</h3>
+      <h4>What went well?</h4>
+
+      <p>
+        The group did well at managing time to have our tasks completed before the deadline. We aimed to have everything
+        done a week ahead of the deadline which allowed us some breathing room to review and finalise the content. For
+        myself, completing work ahead of time has led to feeling less pressured as the deadline approached. This has
+        been a nice change from my usual process of leaving things to the last minute.
+      </p>
+
+      <h4>What could be improved?</h4>
+
+      <p>
+        For Assignment 3 we had a few duplicated documents which meant that finding the right file to add to was made a
+        little trickier than it should have been. This was also compounded by the way that files are listed within MS
+        Teams, if there were more filtering options, I think we’d have managed this more easily. We might have made this
+        easier on ourselves if we kept only collaborative documents within MS Teams and added images and other media to
+        those documents for the team to view and make suggestions around rather than having documents and media stored
+        in the same place.
+      </p>
+
+      <h4>At least one thing that was surprising.</h4>
+
+      <p>
+        I’ve found it quite surprising at how smoothly everything has gone overall. We’ve been lucky to have a great
+        project idea to build upon and contribute to, and the experience and skills possessed by the team have allowed
+        us to work on areas of the assignments that allowed us to play to our strengths. I think there would have been a
+        bit more friction in the group if we had team members with similar skills who were more set on completing
+        certain tasks.
+      </p>
+
+      <h4>At least one thing that you have learned about groups.</h4>
+
+      <p>
+        As alluded to in my previous response, that things can indeed work extremely well when you’re a part of a group.
+        I’ve been a part of groups previously where it’s obvious that not everyone is as invested as other members and
+        it can influence the performance of those who genuinely want the best outcome. Tasks become chores rather than
+        being something that you have an interest and feel invested in. I feel that the team’s shared enthusiasm has had
+        a positive effect on the work we’ve done and had made completing our assignments much more enjoyable.
+      </p>
 
       <h3>Gerard</h3>
       <h4>What went well?</h4>
-      <p>The group dynamic worked well.  All members were active and participated as consistently as they
-         could manage.  Meetings were well structured and enjoyable which meant that ideas and solutions
-          to problems easy to come by. </p>
+      <p>The group dynamic worked well. All members were active and participated as consistently as they
+        could manage. Meetings were well structured and enjoyable which meant that ideas and solutions
+        to problems easy to come by. </p>
 
       <h4>What could be improved?</h4>
       <p>The organisation of documents, it was sometimes confusing which documents were ‘active’.
         Also, because so many documents were shared and the chat was very active, it was easy to lose
-         documents and associated work.  This was somewhat improved with the creation of a separate chat
-         where less documents were shared but I am left wondering whether MS Teams was the ideal platform
-         for document sharing.</p>
+        documents and associated work. This was somewhat improved with the creation of a separate chat
+        where less documents were shared but I am left wondering whether MS Teams was the ideal platform
+        for document sharing.</p>
 
       <h4>At least one thing that was surprising.</h4>
-      <p>How the idea for the project grew and adapted.  Of course, each group member had a
-         slightly different vision of how both the project idea and the assignment itself should
-          end up but the compromise that has been found has, in my opinion at least, turned out well.</p>
+      <p>How the idea for the project grew and adapted. Of course, each group member had a
+        slightly different vision of how both the project idea and the assignment itself should
+        end up but the compromise that has been found has, in my opinion at least, turned out well.</p>
 
       <h4>At least one thing that you have learned about groups.</h4>
       <p>In a way, because this group has worked well, I may not have learnt as much about group work as
-        I have in the past when things have gone badly.  I think from this experience, the main thing I
+        I have in the past when things have gone badly. I think from this experience, the main thing I
         have taken away is that communication is in some ways better when working remotely with a team.
         Notwithstanding my earlier comments about documents getting lost in clutter, when something has
-         been said on MS Teams, there is a record of it to refer to.  Also, it meant that should a team
-          member miss out on a conversation or a meeting, the other members could refer them to it if needed.</p>
+        been said on MS Teams, there is a record of it to refer to. Also, it meant that should a team
+        member miss out on a conversation or a meeting, the other members could refer them to it if needed.</p>
 
       <h3>Liljana</h3>
       <h4>What went well?</h4>
