--- a/Team_Profile.html
+++ b/Team_Profile.html
@@ -97,6 +97,13 @@
           Group Reflection
         </a>
       </li>
+
+      <li class="mb-1">
+        <a aria-expanded="false" class="btn rounded collapsed" href="References.html">
+          References
+        </a>
+      </li>
+
     </ul>
 
   </nav>
