--- a/References.html
+++ b/References.html
@@ -103,7 +103,6 @@
           References
         </a>
       </li>
-
     </ul>
 
   </nav>
@@ -114,88 +113,13 @@
 
     <div class="container-fluid position-sticky p-0 top-0 w-100">
       <div class="hero-image">
-        <h1 class="display-2 text-white text-center p-5">Artefacts</h1>
+        <h1 class="display-2 text-white text-center p-5">References</h1>
       </div>
     </div>
 
     <div class="w-50 mx-auto">
 
-      <h3>Data Flow Diagrams</h3>
 
-      <img alt="first time set up" class="img-fluid" height="500" src="assets/firsttimesetup.jpg" width="730">
-      <img alt="standard operation event" class="img-fluid" height="500" src="assets/standardevent.jpg" width="730">
-      <img alt="crash event" class="img-fluid" height="500" src="assets/crashevent.jpg" width="730">
-      <br>
-
-      <h3>Prototypes</h3>
-      <br>
-      <h4 id="FigmaLink1"><a
-          href="https://www.figma.com/proto/jl1EMnjhf6f2pBPxMF3znI/Drive-Aware-A3-Group16?node-id=0%3A790&scaling=scale-down&page-id=0%3A1">Figma
-        Protoype Link 1</a></h4>
-      <h5>Prototype covers scenario 1, 2 & 3</h5>
-
-      <br>
-      <h5> Keypath Scenario 1 – New User Registration</h5>
-      <ul>
-        <li>Download app from App Store</li>
-        <li>Click on New User button</li>
-        <li>Add email and password and click on register button</li>
-        <li>When Terms & Conditions comes up, click on link to read terms</li>
-        <li>New user must agree to Terms and Conditions to continue</li>
-        <li>User will need to give permission to access Apple Health data (heart rate, emergency contacts, etc.)</li>
-        <li>Calibration required for app to collect baseline for facial cues</li>
-        <li>User to click on Start button when they commence their journey</li>
-      </ul>
-      <br>
-      <h5>Keypath Scenario 2 – Current User</h5>
-      <ul>
-        <li>Login using current email and password</li>
-        <li>User to click on Start button when they commence their journey</li>
-      </ul>
-      <br>
-      <h5>Keypath Scenario 3 – Journey exceeds time limit alert </h5>
-      <ul>
-        <li>User is already logged in and journey has commenced</li>
-        <li>Driver has been driving too long</li>
-        <li>User alerted to deactivate alarm</li>
-        <li>On success, Driver Aware will say "Pull over"</li>
-        <li>Driver pulls over and clicks on Continue to start rest timer</li>
-        <li>On conclusion of 15 minutes, user is requested to test their reaction/response time with a game</li>
-        <li>If user finished correctly then show reaction time and history and continue journey</li>
-        <li>If user does not succeed, rest timer is reset to 15 minutes again</li>
-      </ul>
-
-      <br><br>
-      <h4 id="FigmaLink2"><a
-          href="https://www.figma.com/proto/oHbpoQPlhnr8q0IQA7Urow/A3-Group16-CollisionAlert?node-id=34%3A15044&scaling=scale-down&page-id=0%3A1">Figma
-        Prototype Link 2</a></h4>
-      <h5>Prototype covers scenario 4 only</h5>
-      <br>
-      <h5>Keypath Scenario 4 – Potential collision alert</h5>
-      <ul>
-        <li>User is already logged in and journey has commenced</li>
-        <li>Alert triggered in the event of rapid deceleration</li>
-        <li>User alerted</li>
-        <li>User to deactivate alert with voice command</li>
-        <li>If alert is not deactivated, notifications sent to Emergency contacts</li>
-      </ul>
-
-      <br><br>
-      <h4 id="FigmaLink3"><a
-          href="https://www.figma.com/proto/PElVCqW6VZulzhcW0FsVHM/A3-Group16-FatigueCuesAlert?node-id=339%3A172&scaling=scale-down&page-id=0%3A1">Figma
-        Prototype Link 3</a></h4>
-      <h5>Prototype covers scenario 5 only</h5>
-      <br>
-
-      <h5>Keypath Scenario 5 – Fatigue Cues alert</h5>
-      <ul>
-        <li>User is already logged in and journey has commenced</li>
-        <li>Data collected and measured to test for signs of fatigue (heart rate, movement, facial cues, etc.)</li>
-        <li>User alerted</li>
-        <li>User to deactivate alert with voice command</li>
-        <li>If alert is not deactivated, second alert is sent</li>
-        <li>If second alert is not deactivated then notifications sent to Emergency contacts</li>
-      </ul>
 
     </div>
 
