--- a/Tools.html
+++ b/Tools.html
@@ -96,6 +96,13 @@
           Group Reflection
         </a>
       </li>
+
+      <li class="mb-1">
+        <a aria-expanded="false" class="btn rounded collapsed" href="References.html">
+          References
+        </a>
+      </li>
+
     </ul>
 
   </nav>
