LJ made some changes
fixed spelling mistake in roles and added some content to tools and technologies

--- a/Project_Description.html
+++ b/Project_Description.html
@@ -384,8 +384,8 @@
         monitoring such as Seeing Machines <a
             href="https://www.proactiveinvestors.co.uk/companies/news/213919/seeing-machines-sees-bright-future-for-driver-monitoring-technology-213919.html">
           (Seeing Machines sees bright future for driver monitoring technology) [07/05/21] </a></p>
-      <h4>Flow charts created by team members are below.</h4> <a href="Artefacts.html">(Further details in
-      Artefacts) </a>
+      <h4>Flow charts created by team members are below.</h4>(Further details in <a href="Artefacts.html">
+      Artefacts </a>)
       <img alt="more flow charts from group members" class="img-fluid" src="assets/otherflowcharts.png">
       <br>
       <br>
@@ -628,9 +628,9 @@
             href="https://www.figma.com/proto/oHbpoQPlhnr8q0IQA7Urow/A3-Group16-CollisionAlert?node-id=34%3A15044&scaling=scale-down&page-id=0%3A1">crash
           event</a>, <a
             href="https://www.figma.com/proto/PElVCqW6VZulzhcW0FsVHM/A3-Group16-FatigueCuesAlert?node-id=339%3A172&scaling=scale-down&page-id=0%3A1">driver
-          fatigue</a>, <a
-            href="https://www.figma.com/proto/jl1EMnjhf6f2pBPxMF3znI/Drive-Aware---A3-Group16?node-id=0%3A790&scaling=scale-down&page-id=0%3A1">or
-          prolonged period of driving </a> <a href="Artefacts.html">(See more in Artefacts)</a>. </p>
+          fatigue</a>, or<a
+            href="https://www.figma.com/proto/jl1EMnjhf6f2pBPxMF3znI/Drive-Aware---A3-Group16?node-id=0%3A790&scaling=scale-down&page-id=0%3A1">
+          prolonged period of driving </a>(See more in <a href="Artefacts.html"> Artefacts</a>). </p>
       <img src="assets/sreenshotfigma.png" alt="flow of figma prototype images" class="img-fluid">
       <h2 id="roles">Roles</h2>
 
@@ -642,7 +642,7 @@
         will assist the group in creating our prototype. In practice, this has worked well as the group has a varied
         background and skill set but have all been willing to work hard and accommodate the others. For example, Nicole
         has some experience using Figma, so she will take the lead on creating the wireframing for our prototype and
-        with Lilyana keen to gain experience in this area she offered to spend time working with her. Chris has some
+        with Liljana keen to gain experience in this area she offered to spend time working with her. Chris has some
         experience with video editing so he will be responsible for editing our video presentation. Naturally, Matthew
         continued to work on the development of the Drive aware project during A2 and Gerard, having a healthcare
         background, researched information on which biometrics should be measured and how. Other tasks, such as creating
@@ -922,7 +922,7 @@
         an Apple iOS app, one can use any Mac device and install the XCode programme which uses the swift coding
         language.
         We would need an Apple mac to work on for the <a
-            href="https://www.macrumors.com/roundup/ios-14/"> iOS</a>version and have it updated to version iOS 14. An
+            href="https://www.macrumors.com/roundup/ios-14/"> iOS </a> version and have it updated to version iOS 14. An
         iPhone 6 and above and Apple watch will also be needed to test the app, after the app is complete. Should it
         be decided to include the use of the EEG headband after the initial testing phase, an Apple Watch and the EEG
         headwear <a href="https://www.neeuro.com/senzeband/">
@@ -958,7 +958,7 @@
         Minesweeper clone
         with a colleague in his past. Liljana has some experience with <a
             href="https://www.wix.com/"> WIX</a> in web design and photo editing using the <a
-            href="https://apps.apple.com/au/app/adobe-lightroom-photo-editor/id878783582"> Lightroom app</a>.
+            href="https://apps.apple.com/au/app/adobe-lightroom-photo-editor/id878783582"> Lightroom app</a>. Also, as previously mentioned, Nicole has experience using <a href="https://www.figma.com/files/recent?fuid=971228045439887774">Figma</a>.
       </p>
 
       <h4>The Apple technologies we would need are:</h4>
