content to references

--- a/References.html
+++ b/References.html
@@ -119,6 +119,183 @@
 
     <div class="w-50 mx-auto">
 
+      <p>Apple 2021a, ‘About Face ID advanced technology’, About Face ID advanced technology, viewed 27 May 2021, <https://support.apple.com/en-au/HT208108>.</p>
+      <p>Apple 2021b, ‘About Swift — The Swift Programming Language (Swift 5.4)’, viewed 27 May 2021, <https://docs.swift.org/swift-book/>.</p>
+      <p>Apple 2021c, ‘Get more apps on Apple Watch’, Apple Watch User Guide, viewed 27 May 2021, <https://support.apple.com/en-au/guide/watch/apd99e3c6a68/watchos>.</p>
+      <p>Apple 2021d, ‘iPhone Chargers’, Apple (AU), viewed 27 May 2021, <https://www.apple.com/au/shop/iphone/accessories/power-cables?fh=458e+45d4>.</p>
+      <p>Apple 2021e, ‘Set up your Medical ID in the Health app on your iPhone’, Apple Support, viewed 27 May 2021, <https://support.apple.com/en-us/HT207021>.</p>
+      <p>Apple 2021f, ‘Fonts’, Apple Developer, viewed 18 May 2021, <https://developer.apple.com/fonts/>.</p>
+      <p>Apple 2121, ‘iOS - Health’, Apple (Australia), viewed 27 May 2021, <https://www.apple.com/au/ios/health/>.</p>
+      <p>Apple ‘System Configuration | Apple Developer Documentation’, viewed 27 May 2021, <https://developer.apple.com/documentation/systemconfiguration>.</p>
+      <p>Apple Support. 2021. Use the Health app on your iPhone or iPod touch. [online] Available at: <https://support.apple.com/en-au/HT203037> [Accessed 3 May 2021]. </p>
+      <p>Aviva 2020, ‘FAQ answers’, viewed 24 May 2021, <https://www.aviva.co.uk/faq/answer/>.</p>
+      <p>Aviva.co.uk. 2021. Car Insurance. [online] Available at: <https://www.aviva.co.uk/insurance/motor/car-insurance/> [Accessed 19 May 2021]. </p>
+      <p>Baker, E 2016, ‘Aviva Drive app: how does it work?’, The Telegraph, 31 March, viewed 3 May 2021, <https://www.telegraph.co.uk/cars/road-safety/using-the-aviva-drive-app/>.</p>
+      <p>Berger, M., 2021. A wearable new technology moves brain monitoring from the lab to the real world | Penn Today. [online] Penn Today. Available at: <https://penntoday.upenn.edu/news/innovative-technology-wearable-portable-EEG-moves-brain-monitoring-from-lab-to-real-world> [Accessed 4 April 2021]. </p>
+      <p>Blog - Mind Studios. 2021. Mobile App Development Team: Tips, Structure, and Roles - Mind Studios. [online] Available at: <https://themindstudios.com/blog/mobile-app-development-team/> [Accessed 16 May 2021]. </p>
+      <p>BrainBit ‘Wearable EEG headband - BrainBit’, viewed 28 April 2021, <https://brainbit.com/>.</p>
+      <p>Bureau of Infrastructure and Transport Research, AGD of ‘Fatal Heavy Vehicle Crashes Australia—Quarterly Bulletins’, Bureau of Infrastructure and Transport Research Economics, viewed 27 May 2021, <https://www.bitre.gov.au/publications/ongoing/fatal_heavy_vehicle_crashes_quarterly>.</p>
+      <p>Cannon Logistics 2017, ‘Fatigue Management: What Truck Drivers Need To Know’, Cannon Logistics, viewed 27 May 2021, <https://www.cannonlogistics.com.au/blog/fatigue-management-truck-drivers-need-know/>.</p>
+      <p>Chalimov, A., 2021. How to Build a Mobile App Development Team. [online] Eastern Peak - Technology Consulting & Development Company. Available at: <https://easternpeak.com/blog/how-to-hire-a-mobile-app-development-team/> [Accessed 16 May 2021]. </p>
+      <p>Cooper, A., 2021. F1 News: Biometric underwear to measure drivers' vitals gets FIA homologation. [online] Autosport.com. Available at: <https://www.autosport.com/f1/news/f1-news-biometric-underwear-to-measure-drivers-vitals-gets-fia-homologation-4981898/4981898/> [Accessed 4 May 2021]. </p>
+      <p>Corliss, J 2021, ‘How does sleep affect your heart rate?’, Harvard Health, viewed 27 May 2021, <https://www.health.harvard.edu/blog/how-does-sleep-affect-your-heart-rate-2021012921846>.</p>
+      <p>Dash, D 2020, ‘Use of mobile phones permitted only for navigation while driving vehicles | India News - Times of India’, The Times of India, viewed 3 May 2021, <https://timesofindia.indiatimes.com/india/while-driving-you-can-use-phone-only-for-navigation/articleshow/78342454.cms>.</p>
+      <p>Desmond, P., Matthews, G. and Bush, J., 2001. Individual Differences in Fatigue and Stress States in Two Field Studies of Driving. Proceedings of the Human Factors and Ergonomics Society Annual Meeting, 45(23), pp.1571-1575.
+      Department of Transport and Main Roads (Tmr.qld.gov.au). 2021. Driving tired (Department of Transport and Main Roads). [online] Available at: <https://www.tmr.qld.gov.au/Safety/Driver-guide/Driving-safely/Driving-tired.aspx> [Accessed 3 April 2021]. </p>
+      <p>Developer.apple.com. 2021. Apple Developer Documentation. [online] Available at: <https://developer.apple.com/documentation/coremotion/getting_raw_accelerometer_events> [Accessed 3 May 2021]. </p>
+      <p>Dirty Medicine 2020, Sleep (Cycle, EEG Waveforms, Pathology),. </p>
+      DOH, AGD of 2020, ‘Coronavirus (COVID-19) health alert’, Australian Government Department of Health, viewed 27 May 2021, <https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert>.</p>
+      <p>DOH, AGD of 2021, ‘Leaving Australia | COVID-19 and the border’, viewed 27 May 2021, <https://covid19.homeaffairs.gov.au/leaving-australia>.</p>
+      <p>DrawItKnowIt 2016, Neuroscience - Sleep Cycle EEG,. </p>
+      <p>Eban-Rothschild, A, Appelbaum, L & de Lecea, L 2018, ‘Neuronal Mechanisms for Sleep/Wake Regulation and Modulatory Drive’, Neuropsychopharmacology, vol. 43, no. 5, pp. 937–952. </p>
+      <p>Figma 2021, ‘Figma’, Figma, viewed 27 May 2021, <https://www.figma.com/files/recent?fuid=971229121148403151>.</p>
+      <p> ‘Figma: the collaborative interface design tool.’ Figma, viewed 3 May 2021, <https://www.figma.com/>.</p>
+      <p>Fisher, DL, Rizzo, M, Caird, J & Lee, JD 2011, Handbook of Driving Simulation for Engineering, Medicine, and Psychology, Taylor & Francis Group, Baton Rouge, UNITED STATES. </p>
+      <p>Free Icon Shop ‘Icon Shop - Download free icons for commercial use’, Icon Shop - Download free icons for commercial use, viewed 27 May 2021, <http://freeiconshop.com>.</p>
+      <p>FreeIconsPng 2021, ‘Png Save Profile - Profile Icon free download - 512x512,2.47 KB’, freeiconspng.com, viewed 27 May 2021, <https://www.freeiconspng.com/img/898>.</p>
+      <p>
+      Google 2021, ‘Google Maps’, Google Maps, viewed 27 May 2021, <https://www.google.com.au/maps/place/RMIT+University/@-27.4629477,153.0736333,15z/data=!3m1!4b1>.</p>
+      <p>
+      Granwal, L 2020, ‘Australia - use of wearable health technology 2018’, Statista, viewed 13 May 2021, <https://www.statista.com/statistics/985105/wearable-health-technology-use-australia/>.</p>
+      <p>
+      Griff, AM 2020, ‘What Do Colorblind People See? Types, Images, and More’, Healthline, viewed 27 May 2021, <https://www.healthline.com/health/eye-health/what-do-colorblind-people-see>.</p>
+      <p>
+      Hori, T, Hayashi, M & Tanaka, H 1998, ‘Topographic Mapping of Electroencephalography Coherence in Hypnagogic State’, Psychiatry and clinical neurosciences, vol. 52, no. 2, pp. 147–148. </p>
+      <p>
+      IconArchive 2021, ‘Utilities Activity Monitor Icon | Dynamic Yosemite Iconset | ccard3dev’, viewed 27 May 2021, <https://iconarchive.com/show/dynamic-yosemite-icons-by-ccard3dev/Utilities-Activity-Monitor-icon.html>.</p>
+      <p>
+      Insurance, C., Statistics, R. and 2020, C., 2021. Car Accident Statistics 2020 | Car Research & Statistics — Budget Direct™. [online] Budget Direct. Available at: <https://www.budgetdirect.com.au/car-insurance/research/car-accident-statistics.html> [Accessed 6 May 2021]. </p>
+      <p>
+      iosdesignkit.io ‘iOS Design Kit – Library of iOS app templates and UI elements — iOS 14 GUI’, iOS Design Kit – Library of iOS app templates and UI elements, viewed 28 May 2021, <http://iosdesignkit.io/p9452517/>.</p>
+      <p>
+      iPhoneFAQ 2017, ‘What is the TrueDepth camera system?’, The iPhone FAQ, viewed 27 May 2021, <https://www.iphonefaq.org/archives/976228>.</p>
+      <p>
+      iPhone-Wallpaper ‘New iPhone Wallpaper’, iPhone Wallpapers, viewed 27 May 2021, <https://iphone-wallpaper.pics/item/iphone-wallpaper-home-screen_4490eefd71a45dc1f4df3149443c250c>.</p>
+      <p>
+      Jeremy Moeller 2014, Introduction to EEG,. </p>
+      <p>
+      Josevski, L 2021, ‘Interviewing an IT Professional’, Interviewing an IT Professional, viewed 18 May 2021, <https://s3903477.github.io/ITT-Assignment-2/Interview.html>.</p>
+      <p>
+      Kar, S., Routray, A. and Nayak, B., 2011. Functional network changes associated with sleep deprivation and fatigue during simulated driving: Validation using blood biomarkers. Clinical Neurophysiology, 122(5), pp.966-974. </p>
+      <p>
+
+      Linkedin.com. 2021. Top 5 Skills Required for a Mobile Application Developer. [online] Available at: <https://www.linkedin.com/pulse/top-5-skills-required-mobile-application-developer-kevin-toth> [Accessed 16 May 2021]. </p>
+      <p>
+      Lucidchart. 2021. What is a Data Flow Diagram. [online] Available at: <https://www.lucidchart.com/pages/data-flow-diagram> [Accessed 3 May 2021]. </p>
+      <p>
+      Mantua, J., Gravel, N. and Spencer, R., 2016. Reliability of Sleep Measures from Four Personal Health Monitoring Devices Compared to Research-Based Actigraphy and Polysomnography. Sensors, 16(5), p.646. </p>
+      <p>
+      Natus Neuro 2016, EEG Waveforms Building Blocks of Sleep Staging,. </p>
+      <p>
+      Neeuro ‘SenzeBand: The Brainwave Sensor for Everyone’, Neeuro. </p>
+      <p>
+      Nordic APIs 2016, ‘What is the Difference Between an API and an SDK?’, Nordic APIs, viewed 27 May 2021, <https://nordicapis.com/what-is-the-difference-between-an-api-and-an-sdk/>.</p>
+      <p>
+      Ogilvie, R 1984, ‘The Detection of Sleep Onset: behavioral and physiological convergence’, Psychophysiology, vol. 21, pp. 510–520. </p>
+      <p>
+      Ogilvie, R 2001, ‘The Process of Falling Asleep’, Sleep Medicine Reviews, vol. 5, no. 3, pp. 247–270. </p>
+      <p>
+      optalert 2016, ‘Driver fatigue: why does driving make you tired?’, Optalert. </p>
+      <p>
+      PikPng 2021, ‘Navigation Icon Png Transparent , Png Download - Circle Clipart - Large Size Png Image - PikPng’, viewed 27 May 2021, <https://www.pikpng.com/transpng/howhJom/>.</p>
+      <p>
+      Pivik, RT & Busby, K 1996, ‘Heart rate associated with sleep onset in preadolescent’, Journal of Sleep Research, vol. 5, no. 1, pp. 33–36. </p>
+      <p>
+      Pivik, RT & Busby, K ‘Heart Rate Associated with Sleep Onset in Preadolescents’,. </p>
+      <p>
+      Proactive 2021, ‘Seeing Machines sees bright future for driver monitoring technology’, Proactiveinvestors UK, viewed 27 May 2021, <https://www.proactiveinvestors.co.uk/companies/news/213919/seeing-machines-sees-bright-future-for-driver-monitoring-technology-213919.html>.</p>
+      <p>
+      Quicksprout.com. 2021. 14 Mobile Trends That Are Dominating 2021. [online] Available at: <https://www.quicksprout.com/mobile-trends/> [Accessed 6 May 2021]. </p>
+      <p>
+      Ridden, P., 2021. BreathalEyes app tells you if you're too drunk to drive. [online] New Atlas. Available at: <https://newatlas.com/breathaleyes-iphone-app-alcohol-detector/20991/> [Accessed 3 April 2021]. </p>
+      <p>
+      Rohit, F., Kulathumani, V., Kavi, R., Elwarfalli, I., Kecojevic, V. and Nimbarte, A., 2017. Real‐time drowsiness detection using wearable, lightweight brain sensing headbands. IET Intelligent Transport Systems, 11(5), pp.255-263. </p>
+      <p>
+      Rehman, A 2021, ‘Sleep Drive and Your Body Clock’, Sleep Foundation, viewed 27 May 2021, <https://www.sleepfoundation.org/circadian-rhythm/sleep-drive-and-your-body-clock>.</p>
+      <p>
+      Rosencrance, L 2019, ‘What is software development kit (SDK)? - Definition from WhatIs.com’, WhatIs.com, viewed 27 May 2021, <https://whatis.techtarget.com/definition/software-developers-kit-SDK>.</p>
+      <p>
+      Russell, R 2018, ‘Circadian rhythm plays vital role in driving | Saltwire’, viewed 27 May 2021, <https://www.saltwire.com/newfoundland-labrador/wheels/circadian-rhythm-plays-vital-role-in-driving-245554/>.</p>
+      <p>
+      Samson, DR 2020, ‘Taking the sleep lab to the field: Biometric techniques for quantifying sleep and circadian rhythms in humans’, American Journal of Human Biology, vol. n/a, no. n/a, p. e23541. </p>
+      <p>
+      Seeing Machines 2021, ‘Driver monitoring technology for automotive, transport & logistics industries’, Seeing Machines, viewed 27 May 2021, <https://www.seeingmachines.com/>.</p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52029831?type=promoted#searchRequestToken=31ab03fd-30d0-4a1d-a360-8bbf94c902d9> [Accessed 16 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52283380?type=standard#searchRequestToken=31ab03fd-30d0-4a1d-a360-8bbf94c902d9> [Accessed 16 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52277864?type=standout#searchRequestToken=31ab03fd-30d0-4a1d-a360-8bbf94c902d9> [Accessed 16 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52285726?type=standard#searchRequestToken=31ab03fd-30d0-4a1d-a360-8bbf94c902d9> [Accessed 16 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52287121?type=standout#searchRequestToken=31ab03fd-30d0-4a1d-a360-8bbf94c902d9> [Accessed 16 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52237290?type=standout#searchRequestToken=3356146e-a15c-4d1b-92cd-6d31ec44eaf3> [Accessed 16 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52244984?type=standard#searchRequestToken=3356146e-a15c-4d1b-92cd-6d31ec44eaf3> [Accessed 16 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52136017?type=promoted#searchRequestToken=b8dd4477-f792-4ddd-b9de-7ac2800eb981> [Accessed 17 May 2021]. </p>
+      <p>¬¬
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52239656?type=standout#searchRequestToken=b8dd4477-f792-4ddd-b9de-7ac2800eb981> [Accessed 17 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52299927?type=standard#searchRequestToken=5b5a3e7d-a111-494b-91cc-343e44ce75af> [Accessed 19 May 2021]. </p>
+      <p>
+      SEEK. 2021. [online] Available at: <https://www.seek.com.au/job/52231962?type=promoted#searchRequestToken=5b5a3e7d-a111-494b-91cc-343e44ce75af> [Accessed 19 May 2021]. </p>
+      <p>
+      SEEK. 2021. SEEK - Browser Upgrade. [online] Available at: <https://www.seek.com.au/job/52249558?type=promoted#searchRequestToken=3356146e-a15c-4d1b-92cd-6d31ec44eaf3> [Accessed 16 May 2021]. </p>
+      <p>
+      SEEK.2021. [online] Available at: <https://www.seek.com.au/job/52312968?type=standard#searchRequestToken=5b5a3e7d-a111-494b-91cc-343e44ce75af> [Accessed 19 May 2021]. </p>
+      <p>
+      Statista. 2021. Australia: smartphone users 2017-2025 | Statista. [online] Available at: <https://www.statista.com/statistics/467753/forecast-of-smartphone-users-in-australia/#:~:text=In%202017%2C%20the%20number%20of,80%20percent%20in%20the%20country.&text=To%20Australians%2C%20a%20mobile%20phone,way%20to%20make%20phone%20calls.> [Accessed 6 May 2021]. </p>
+      <p>
+      UbiCar Insurance. 2021. ‘Fatal Five’ Causes of Car Accidents in Australia. [online] Available at: <https://ubicar.com.au/blog/the-fatal-five-most-common-causes-of-fatal-vehicle-accidents-in-australia/> [Accessed 6 May 2021]. </p>
+      <p>
+      ‘SenzeBand: The Brainwave Sensor for Everyone’ Neeuro, viewed 28 April 2021, <https://www.neeuro.com/senzeband/>.</p>
+      <p>
+      Sharples, J & Taylor, J 2007, ‘The role of light in controlling alertness’, Future Mind, p. 2. </p>
+      <p>
+      SHIN, D., SAKAI, H. and UCHIYAMA, Y., 2010. Slow eye movement detection can prevent sleep-related accidents effectively in a simulated driving task. Journal of Sleep Research, 20(3), pp.416-424. </p>
+      <p>
+      Smith, Y 2016, ‘What is the Circadian Rhythm?’, News-Medical.net, viewed 27 May 2021, <https://www.news-medical.net/health/Circadian-Rhythm.aspx>.</p>
+      <p>
+      Swanner, N 2017, ‘Swift: Most In-Demand Language for Developers’, Dice Insights, viewed 3 May 2021, <https://insights.dice.com/2017/01/27/swift-high-demand-developers/>.</p>
+      <p>
+      ‘Swift - Apple Developer’, viewed 3 May 2021, <https://developer.apple.com/swift/>.
+      Taieb, Y ‘Learn Swift Programming: Swift Tutorial for Beginners’, viewed 3 May 2021, <https://www.bitdegree.org/course/learn-swift-programming>.</p>
+      <p>
+      Ting, P-H, Hwang, J-R, Doong, J-L & Jeng, M-C 2008, ‘Driver fatigue and highway driving: A simulator study’, Physiology & Behavior, vol. 94, no. 3, pp. 448–453. </p>
+      <p>
+      Unsplash ‘Photo by Shiwa ID on Unsplash’, viewed 27 May 2021, <https://unsplash.com/photos/xwp7CfqsObQ>.</p>
+      <p>
+      Veprof 2021, ‘Apple’s Face ID technology Security Possibilities’, viewed 27 May 2021, <https://www.veprof.com/face-id-technology-security-possibilities.html>.</p>
+      <p>
+      VHVRS 2021, ‘Download Settings Icon Png Image Free Download Searchpng - Free Vector Icons, Transparent Png - vhv’, viewed 27 May 2021, <https://www.vhv.rs/download/hbxmTbi_settings-icon-png-image-free-download-searchpng-free/>.</p>
+      <p>
+      VicRoads 2017, ‘Safe caravanning’, VicRoads, viewed 27 May 2021, <https://www.vicroads.vic.gov.au:443/safety-and-road-rules/vehicle-safety/safe-caravanning>.</p>
+      <p>
+      VicRoads 2021a, ‘Vic Roads’, VicRoads, viewed 3 May 2021, <https://www.vicroads.vic.gov.au:443/>.</p>
+      <p>
+      VicRoads 2021b, ‘Mobile phones, technology & driving’, VicRoads, viewed 28 May 2021, <https://www.vicroads.vic.gov.au:443/safety-and-road-rules/driver-safety/mobile-phones-and-driving>.</p>
+      <p>
+      Victorain Government 2021, ‘Travel | Coronavirus Victoria’, viewed 27 May 2021, <http://www.coronavirus.vic.gov.au/travel-restrictions>.</p>
+      <p>
+      Vogelpohl, T., Kühn, M., Hummel, T. and Vollrath, M., 2019. Asleep at the automated wheel—Sleepiness and fatigue during highly automated driving. Accident Analysis & Prevention, 126, pp.70-84. </p>
+      <p>
+      W3Schools 2021, ‘W3Schools Online Web Tutorials’, viewed 27 May 2021, <https://www.w3schools.com/>.</p>
+      <p>
+      Williamson, A., Feyer, A. and Friswell, R., 1996. The impact of work practices on fatigue in long distance truck drivers. Accident Analysis & Prevention, 28(6), pp.709-719. </p>
+      <p>
+      Wotton, M et al, 2021. DAT Team Assignment 2. [online] S3903477.github.io. Available at: <https://s3903477.github.io/ITT-Assignment-2/Project_Idea.html> [Accessed 3 May 2021]. </p>
+      <p>
+      Wotton, M 2021a, ‘COSC2196 Introduction to Information Technology’, viewed 18 May 2021, <https://mattwotton.github.io/#one>.</p>
+      <p>
+      Wotton, M 2021b, ‘COSC2196 Introduction to Information Technology’, viewed 25 May 2021, <https://mattwotton.github.io/#one>.</p>
+      <p>
+      Yu, A., 2021. Before you continue to YouTube. [online] Youtube.com. Available at: <https://www.youtube.com/watch?v=bUQz9ZWjsvc> [Accessed 3 May 2021]. </p>
+      <p>
+      Zhang, H, Yan, X, Wu, C & Qiu, TZ 2014, ‘Effect of Circadian Rhythms and Driving Duration on Fatigue Level and Driving Performance of Professional Drivers’, Transportation Research Record, vol. 2402, no. 1, pp. 19–27. </p>
+
 
 
     </div>
