LJ made couple changes
small errors fixed

--- a/Project_Description.html
+++ b/Project_Description.html
@@ -886,7 +886,7 @@
         forward-facing lens. </p>
       <br>
       <h4>Wearable Devices</h4>
-      <p>While beyond the scope of Assignment 3, as suggested in A2 (Assignment 2), the use an <a
+      <p>While beyond the scope of Assignment 3, as suggested in Assignment 2, the use of an <a
           href="https://www.healthline.com/health/eeg"> EEG
         (Electroencephalography) </a>wearable device, would help monitor if sleep were to occur by measuring the
         electrical signals of the brain.
@@ -906,7 +906,7 @@
       <img alt="apple watch and iphone" class="img-fluid" src="assets/newphoneimage.jpg">
       <br>
       <br>
-      <h4> Aesthetics </h4>
+      <h4>Aesthetics </h4>
       <p>We need to create icons for use in our app or alternatively we could use the <a
           href="https://freeiconshop.com/"> icon
         shop</a> which is open source for our user interface-UI. <a
