--- a/Project_Description.html
+++ b/Project_Description.html
@@ -1129,7 +1129,7 @@
         best-case scenario where the team aims to bring the product to market.
       </p>
 
-      <table class="table table-dark">
+      <table class="table">
 
         <thead>
 
